--- a/Home.html
+++ b/Home.html
@@ -6,10 +6,120 @@
     <title>Home</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <div class="container-fluid">
-        
+    <div class="container-fluid" id="main-content">
+        <div class="row">
+            <div class="col-md-3 sidebar">
+              <div class="container-fluid g-0">
+                <div class="row">
+               <div class="logo col-md-12 navbar-brand"> 
+                    <img class="img-fluid" src="assets/web-logo.png">
+                </div>
+                <nav class="navbar navbar-expand-md col-md-12 margin-for-menu">
+                    <div class="container-fluid justify-content-rigth">
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse " id="navbarNav">
+                        <ul class="navbar-nav flex-column for-space">
+                          <li class="nav-item">
+                            <a class="btn btn-toggle nav-link" id="text-hover" href="Home.html">Home</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="btn btn-toggle nav-link" id="text-hover" href="Home.html">Clients</a>
+                          </li>
+                          <li class="nav-item">
+                            <button class="btn btn-toggle collapsed" id="text-hover" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample1">
+                              Websites
+                            </button>
+                            <div class="collapse" id="collapseExample1">
+                              <ul class="nav flex-column subs-menu">
+                                <li class="nav-item">
+                                  <a class="btn" id="btn-colors" href="#"><i class="bi bi-arrow-right-short"></i>DNS</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="btn" id="btn-colors" href="#"><i class="bi bi-arrow-right-short"></i>Staging</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="btn" id="btn-colors" href="#"><i class="bi bi-arrow-right-short"></i>Databases</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="btn" id="btn-colors" href="#"><i class="bi bi-arrow-right-short"></i>FTP</a>
+                                </li>
+                              </ul>
+                            </div>
+                          </li>
+                          <li class="nav-item">
+                            <a class="btn btn-toggle nav-link" id="text-hover" href="Home.html">Global Plugins</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="btn btn-toggle nav-link" id="text-hover" href="Home.html">Global Config</a>
+                          </li>
+                          <li class="nav-item">
+                            <button class="btn btn-toggle collapsed" id="text-hover" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
+                              Security
+                            </button>
+                            <div class="collapse" id="collapseExample2">
+                              <ul class="nav flex-column subs-menu">
+                                <li class="nav-item">
+                                  <a class="btn" id="btn-colors" href="#"><i class="bi bi-arrow-right-short"></i>SSL</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="btn" id="btn-colors" href="#"><i class="bi bi-arrow-right-short"></i>Firewall</a>
+                                </li>
+                              </ul>
+                            </div>
+                          </li>
+                          <li class="nav-item">
+                            <a class="btn btn-toggle nav-link" id="text-hover" href="Home.html">Migration</a>
+                          </li>
+                      </div>
+                    </div>
+                  </nav>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-9 scrollable">
+              <div class="text-center">
+                <h1>Home</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
+              </div>
+              <div class="text-center">
+                <h1>Home</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
+              </div>
+              <div class="text-center">
+                <h1>Home</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
+              </div>
+              <div class="text-center">
+                <h1>Home</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
+              </div>
+              <div class="text-center">
+                <h1>Home</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
+              </div>
+              <div class="text-center">
+                <h1>Home</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
+              </div>
+              <div class="text-center">
+                <h1>Home</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
+              </div>
+              <div class="text-center">
+                <h1>Home</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
+              </div>
+              <div class="text-center">
+                <h1>Home</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
+              </div>
+            </div>
+        </div>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
