--- a/Home.html
+++ b/Home.html
@@ -12,13 +12,14 @@
     <div class="container-fluid" id="main-content">
         <div class="row">
             <div class="col-md-3 sidebar">
-              <div class="container-fluid g-0">
-                <div class="row">
-               <div class="logo col-md-12 navbar-brand"> 
+               <div class="logo "> 
                     <img class="img-fluid" src="assets/web-logo.png">
                 </div>
-                <nav class="navbar navbar-expand-md col-md-12 margin-for-menu">
-                    <div class="container-fluid justify-content-rigth">
+                <nav class="navbar navbar-expand-md  margin-for-menu">
+                    <div class="container-fluid justify-content-left">
+                      <a class="navbar-brand justify-content-left hide-small-screen" href="#">
+                        <img src="assets/web-logo.png" alt="" width="150" height="auto" class="img-fluid">
+                      </a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -79,8 +80,6 @@
                     </div>
                   </nav>
                 </div>
-              </div>
-            </div>
             <div class="col-md-9 scrollable">
               <div class="text-center">
                 <h1>Home</h1>
