--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
                <div class="logo "> 
                     <img class="img-fluid" src="assets/web-logo.png">
                 </div>
-                <nav class="navbar navbar-expand-md  margin-for-menu">
+                <nav class="navbar navbar-expand-md  navbar-dark margin-for-menu">
                     <div class="container-fluid justify-content-left">
                       <a class="navbar-brand justify-content-left hide-small-screen" href="#">
                         <img src="assets/web-logo.png" alt="" width="150" height="auto" class="img-fluid">
@@ -81,41 +81,170 @@
                   </nav>
                 </div>
             <div class="col-md-9 scrollable">
-              <div class="text-center">
-                <h1>Home</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
-              </div>
-              <div class="text-center">
-                <h1>Home</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
-              </div>
-              <div class="text-center">
-                <h1>Home</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
-              </div>
-              <div class="text-center">
-                <h1>Home</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
-              </div>
-              <div class="text-center">
-                <h1>Home</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
-              </div>
-              <div class="text-center">
-                <h1>Home</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
-              </div>
-              <div class="text-center">
-                <h1>Home</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
-              </div>
-              <div class="text-center">
-                <h1>Home</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
-              </div>
-              <div class="text-center">
-                <h1>Home</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ab aut ipsam dolor vel fuga amet omnis, voluptatum inventore hic error illo, reiciendis perspiciatis velit veniam commodi ea ratione tenetur.</p>
+              <!-- Right side top header -->
+              <header class="p-3 mb-3 border-bottom top-header-back">
+                <div class="container-fluid">
+                  <div class="row d-flex">
+                    <h2 class="col-8 d-flex mb-2 mb-lg-0 top-header-text">
+                      <span class="house-color"><i class="bi bi-house-door"></i></span><span class="right-angle-color"><i class="bi bi-chevron-right"></i></span> Dashboard
+                    </h2>
+                    <div class="col-4 d-flex justify-content-end" style="gap:1rem;">
+                    <form class="top-header-form">
+                      <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+                    </form>
+            
+                    <div class="dropdown text-end">
+                      <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="/assets/profile-pic.jpeg" alt="mdo" width="32" height="32" class="rounded-circle">
+                      </a>
+                      <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+                        <li><a class="dropdown-item" href="#">New project...</a></li>
+                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Sign out</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                  </div>
+                </div>
+              </header>
+            
+              <!-- Right side main content -->
+              <div class="container-fluid">
+                <div class="row padding-for-card">
+                  <!-- 1st Card Content -->
+                  <div class="col-xl-3 col-md-6 p-2">
+                    <div class="card card-stats">
+                      <div class="card-body">
+                        <div class="row">
+                          <div class="col-5 icons-size" ><i class="bi bi-database-fill"></i></div>
+                          <div class="col-7 text-end">
+                            <div class="numbers-data">
+                              <p class="card-category">Capacity</p>
+                              <h4 class="card-title">100GB</h4>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card-footer">
+                        <hr class="divider-part">
+                       <div>
+                        <i class="bi bi-bootstrap-reboot"></i>
+                        Updated now
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+                   <!-- 2nd Card Content -->
+                   <div class="col-xl-3 col-md-6 p-2">
+                    <div class="card card-stats">
+                      <div class="card-body">
+                        <div class="row">
+                          <div class="col-5 icons-size" ><i class="bi bi-currency-dollar" style="color:#198754;"></i></div>
+                          <div class="col-7 text-end">
+                            <div class="numbers-data">
+                              <p class="card-category">Revenue</p>
+                              <h4 class="card-title">$1500</h4>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card-footer">
+                        <hr class="divider-part">
+                       <div>
+                        <i class="bi bi-calendar"></i>
+                        Last day
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+                   <!-- 3rd Card Content -->
+                   <div class="col-xl-3 col-md-6 p-2">
+                    <div class="card card-stats">
+                      <div class="card-body">
+                        <div class="row">
+                          <div class="col-5 icons-size" ><i class="bi bi-bug" style="color:#ff9500;"></i></div>
+                          <div class="col-7 text-end">
+                            <div class="numbers-data">
+                              <p class="card-category">Errors</p>
+                              <h4 class="card-title">25</h4>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card-footer">
+                        <hr class="divider-part">
+                       <div>
+                        <i class="bi bi-clock"></i>
+                        Last day
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+                   <!-- 4th Card Content -->
+                   <div class="col-xl-3 col-md-6 p-2">
+                    <div class="card card-stats">
+                      <div class="card-body">
+                        <div class="row">
+                          <div class="col-5 icons-size" ><i class="bi bi-heart" style="color:#1d62f0;"></i></div>
+                          <div class="col-7 text-end">
+                            <div class="numbers-data">
+                              <p class="card-category">Followers</p>
+                              <h4 class="card-title">+50</h4>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card-footer">
+                        <hr class="divider-part">
+                       <div>
+                        <i class="bi bi-bootstrap-reboot"></i>
+                        Updated now
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row padding-for-accordion">
+                  <div class="card accordion-space">
+                    <div class="card-header accordion-header-bar">
+                      <h4 class="accordion-header-text">Guidelines</h4>
+                    </div>
+                  <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                          Accordion Item #1
+                        </button>
+                      </h2>
+                      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                          Accordion Item #2
+                        </button>
+                      </h2>
+                      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                          Accordion Item #3
+                        </button>
+                      </h2>
+                      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                </div>
               </div>
             </div>
         </div>
