all website pages

--- a/databases.html
+++ b/databases.html
@@ -123,106 +123,71 @@
 
         <!-- Body content -->
         <div class="container-fluid">
-          <!-- Card content -->
-          <div class="row padding-for-card">
-            <!-- 1st Card Content -->
-            <div class="col-xl-3 col-md-6 p-2">
-              <div class="card card-stats">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-5 icons-size"><i class="bi bi-database-fill"></i></div>
-                    <div class="col-7 text-end">
-                      <div class="numbers-data">
-                        <p class="card-category">Capacity</p>
-                        <h4 class="card-title">100GB</h4>
-                      </div>
-                    </div>
-                  </div>
+          <div class="row for-padding-both1">
+          <div class="pricing-header text-center">
+            <h1 class="display-4 fw-normal">Database Pricing</h1>
+            <p class="fs-5 text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, iure. Iure laudantium autem non enim illum alias tempore. Cumque sequi velit porro blanditiis dolor error.</p>
+          </div>
+        </div>
+          <div class="row row-cols-1 row-cols-md-3 mb-3 text-center for-padding-both2">
+            <div class="col">
+              <div class="card mb-4 rounded-3 shadow-sm">
+                <div class="card-header py-3">
+                  <h4 class="my-0 fw-normal">Free</h4>
                 </div>
-                <div class="card-footer">
-                  <hr class="divider-part">
-                  <div>
-                    <i class="bi bi-bootstrap-reboot"></i>
-                    Updated now
-                  </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">$0<small class="text-muted fw-light">/mo</small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>10 users included</li>
+                    <li>2 GB of storage</li>
+                    <li>Email support</li>
+                    <li>Help center access</li>
+                  </ul>
+                  <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
                 </div>
               </div>
             </div>
-            <!-- 2nd Card Content -->
-            <div class="col-xl-3 col-md-6 p-2">
-              <div class="card card-stats">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-5 icons-size"><i class="bi bi-currency-dollar" style="color:#198754;"></i></div>
-                    <div class="col-7 text-end">
-                      <div class="numbers-data">
-                        <p class="card-category">Revenue</p>
-                        <h4 class="card-title">$1500</h4>
-                      </div>
-                    </div>
-                  </div>
+            <div class="col">
+              <div class="card mb-4 rounded-3 shadow-sm">
+                <div class="card-header py-3">
+                  <h4 class="my-0 fw-normal">Pro</h4>
                 </div>
-                <div class="card-footer">
-                  <hr class="divider-part">
-                  <div>
-                    <i class="bi bi-calendar"></i>
-                    Last day
-                  </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">$15<small class="text-muted fw-light">/mo</small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>20 users included</li>
+                    <li>10 GB of storage</li>
+                    <li>Priority email support</li>
+                    <li>Help center access</li>
+                  </ul>
+                  <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
                 </div>
               </div>
             </div>
-            <!-- 3rd Card Content -->
-            <div class="col-xl-3 col-md-6 p-2">
-              <div class="card card-stats">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-5 icons-size"><i class="bi bi-bug" style="color:#ff9500;"></i></div>
-                    <div class="col-7 text-end">
-                      <div class="numbers-data">
-                        <p class="card-category">Errors</p>
-                        <h4 class="card-title">25</h4>
-                      </div>
-                    </div>
-                  </div>
+            <div class="col">
+              <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                <div class="card-header py-3 text-white bg-primary border-primary">
+                  <h4 class="my-0 fw-normal">Enterprise</h4>
                 </div>
-                <div class="card-footer">
-                  <hr class="divider-part">
-                  <div>
-                    <i class="bi bi-clock"></i>
-                    Last day
-                  </div>
+                <div class="card-body">
+                  <h1 class="card-title pricing-card-title">$29<small class="text-muted fw-light">/mo</small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>30 users included</li>
+                    <li>15 GB of storage</li>
+                    <li>Phone and email support</li>
+                    <li>Help center access</li>
+                  </ul>
+                  <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
                 </div>
               </div>
             </div>
-            <!-- 4th Card Content -->
-            <div class="col-xl-3 col-md-6 p-2">
-              <div class="card card-stats">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-5 icons-size"><i class="bi bi-heart" style="color:#1d62f0;"></i></div>
-                    <div class="col-7 text-end">
-                      <div class="numbers-data">
-                        <p class="card-category">Followers</p>
-                        <h4 class="card-title">+50</h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-footer">
-                  <hr class="divider-part">
-                  <div>
-                    <i class="bi bi-bootstrap-reboot"></i>
-                    Updated now
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- Card content end-->
+          </div>
+
           <!-- Accordion content -->
           <div class="row padding-for-accordion">
             <div class="card accordion-space">
               <div class="card-header accordion-header-bar">
-                <h4 class="accordion-header-text">Guidelines</h4>
+                <h4 class="accordion-header-text">Frequently Asked Questions</h4>
               </div>
               <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
